Add attributes to quickTip directive

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       >
       <h1>{{title}}</h1>
       <root></root>
-      <quick-tip></quick-tip>
+      <quick-tip message="Example"></quick-tip>
     </div>
   </body>
 
