--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
 
   <body >
     <div
-      ng-app="mainApp"
+      ng-app="ngp"
       ng-controller="appController"
       class="main-container"
       >
       <h1>{{title}}</h1>
       <root></root>
-      <quick-tip message="Example"></quick-tip>
+      <avatar name="Evan Zodl"></avatar>
     </div>
   </body>
 
